html page setup

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Happy Healthy Co.</title>
+        <link rel="stylesheet" type="text/css" href="stylefile.css">
+        <style>
+            ul.nav li{
+                display: inline-block;
+                padding-right: 10px;
+            }
+        </style>
+    </head>
+    <body>
+  Happy Healthy Co.
+
+    </body>
+</html>
