--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>Happy Healthy Co.</title>
         <link rel="stylesheet" type="text/css" href="stylefile.css">
+        <link href='css/bootstrap.css' rel='stylesheet'>
+        <meta name="viewpoint" content="width=device-width,initial-scale=1.0"
         <style>
             ul.nav li{
                 display: inline-block;
@@ -11,6 +13,18 @@
         </style>
     </head>
     <body>
+    </div>
+<div class="row">
+ <div class="col">
+   1 of 3
+ </div>
+ <div class="col">
+   2 of 3
+ </div>
+ <div class="col">
+   3 of 3
+ </div>
+</div>
 
   Happy Healthy Co.
     </body>
