--- a/index.html
+++ b/index.html
@@ -3,15 +3,52 @@
     <head>
         <title>Happy Healthy Co.</title>
         <link rel="stylesheet" type="text/css" href="stylefile.css">
+        <link href='css/bootstrap.css' rel='stylesheet'>
+        <meta name="viewport" content="width=device-width,
+initial-scale=1.0">
         <style>
             ul.nav li{
                 display: inline-block;
                 padding-right: 10px;
             }
+
         </style>
+
     </head>
     <body>
 
-  Happy Healthy Co.
+        <h1>Happy Healthy Co.
+        </h1>
+
+          <script src="js/jquery.js">
+          </script>
+
+          <script>
+          $('h1').css("color","grey")
+          </script>
+
+  <div class="row">
+    <div class="col-xs-3">
+      <p>
+    FOOD
+    <img src="giraffe.jpg" alt="cat" width="128" height="128">
+      </p>
+  </div>
+  <div class="col-xs-3">
+      <p>
+        FITNESS
+        <img src="cat.jpg" alt="cat" width="128" height="128">
+      </p>
+    </div>
+      <div class="col-xs-3">
+        <p>
+      FEELINGS
+      <img src="sloth.gif" alt="cat" width="128" height="128">
+        </p>
+    </div>
+  </div>
+
+
+
     </body>
 </html>
