format the text

--- a/index.html
+++ b/index.html
@@ -2,16 +2,46 @@
 <html>
     <head>
         <title>Happy Healthy Co.</title>
+        <link href='css/bootstrap.min.css' rel='stylesheet'>
         <link rel="stylesheet" type="text/css" href="stylefile.css">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1">
         <style>
-            ul.nav li{
-                display: inline-block;
-                padding-right: 10px;
-            }
+          ul.nav li{
+            display: inline-block;
+            padding-right: 10px;
+          }
         </style>
-    </head>
-    <body>
 
-  Happy Healthy Co.
+    </head>
+
+    <body>
+<br>
+</br>
+
+<center>
+<h1>
+Happy Healthy Co.
+</h1>
+
+  <br>
+  </br>
+
+<p>
+  <div class="row">
+  <div class="col-lg-4">
+    FITNESS
+  </div>
+  <div class="col-lg-4">
+    FOOD
+  </div>
+  <div class="col-lg-4">
+    FEELINGS
+  </div>
+  </div>
+</p>
+
+</center>
+
     </body>
+
 </html>
