--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Happy Healthy Co.
     FOOD
   </div>
   <div class="col-lg-4">
-    FEELINGS
+    <a href="Feelings.html">FEELINGS</a> 
   </div>
   </div>
 </p>
