--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ Happy Healthy Co.
 <p>
   <div class="row">
   <div class="col-lg-4">
-    FITNESS
+    <a href="Fitness.html">FITNESS</a>
   </div>
   <div class="col-lg-4">
     FOOD
   </div>
   <div class="col-lg-4">
-    <a href="Feelings.html">FEELINGS</a> 
+    <a href="Feelings.html">FEELINGS</a>
   </div>
   </div>
 </p>
