--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Happy Healthy Co.
     <a href="Fitness.html">FITNESS</a>
   </div>
   <div class="col-lg-4">
-    FOOD
+    <a href="Food.html">FOOD</a>
   </div>
   <div class="col-lg-4">
     <a href="Feelings.html">FEELINGS</a>
