--- a/Food.html
+++ b/Food.html
@@ -22,3 +22,19 @@
 <h1>
 FOOD
 </h1>
+<<img src="sloth.gif" alt="sloth">
+<br>
+</br>
+
+<p>
+Some yummy recipes
+<ul>
+When you're trying to improve your eating habits, it can be easy to get stuck in a rut, relying on the same old dishes week in, week out.
+Our recipes are all designed to be as delicious as they are nutritious, from lighter versions of your favourite foods to fresh new flavours that you might not have tried before.
+Which of these healthy suppers will you try this week?
+</p>
+</center>
+
+</body>
+
+</html>
