--- a/Fitness.html
+++ b/Fitness.html
@@ -1,24 +1,21 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Happy Healthy Co.</title>
-        <link href='css/bootstrap.min.css' rel='stylesheet'>
-        <link rel="stylesheet" type="text/css" href="stylefile.css">
-
-        <meta name="viewpoint" content="width=device-width, initial-scale=1">
-        <style>
-          ul.nav li{
-            display: inline-block;
-            padding-right: 10px;
-          }
-        </style>
-
-    </head>
-
-    <body>
+<<img src="sloth.gif" alt="sloth">
 <br>
 </br>
-<center>
-<h1>
-FITNESS
-</h1>
+
+<p>
+Some yummy recipes
+<ul>
+  You've decided it's time to start exercising.
+  Congratulations!
+  You've taken the first step on your way to a new and improved body and mind
+
+  "Exercise is the magic pill," says Michael R. Bracko, EdD, FACSM, chairman of the American College of Sports Medicine's Consumer Information Committee.
+  "Exercise can literally cure diseases like some forms of heart disease.
+  Exercise has been implicated in helping people prevent or recover from some forms of cancer.
+  Exercise helps people with arthritis. Exercise helps people prevent and reverse depression."
+</p>
+</center>
+
+</body>
+
+</html>
