--- a/Fitness.html
+++ b/Fitness.html
@@ -1,3 +1,30 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Feelings: Happy Healthy Co.</title>
+        <link href='css/bootstrap.min.css' rel='stylesheet'>
+        <link rel="stylesheet" type="text/css" href="stylefile.css">
+
+        <meta name="viewpoint" content="width=device-width, initial-scale=1">
+        <style>
+          ul.nav li{
+            display: inline-block;
+            padding-right: 10px;
+          }
+        </style>
+
+    </head>
+
+    <body>
+<br>
+</br>
+
+<center>
+<h1>
+FITNESS
+</h1>
+
+
 <<img src="sloth.gif" alt="sloth">
 <br>
 </br>
