--- a/Fitness.html
+++ b/Fitness.html
@@ -30,7 +30,7 @@ FITNESS
 </br>
 
 <p>
-Some yummy recipes
+ALL YOUR FITNESS NEEDS IN ONE PLACE... ISH
 <ul>
   You've decided it's time to start exercising.
   Congratulations!
