--- a/Fitness.html
+++ b/Fitness.html
@@ -40,7 +40,23 @@ ALL YOUR FITNESS NEEDS IN ONE PLACE... ISH
   "Exercise can literally cure diseases like some forms of heart disease.
   Exercise has been implicated in helping people prevent or recover from some forms of cancer.
   Exercise helps people with arthritis. Exercise helps people prevent and reverse depression."
+  Heres a basic full body workout for you to try!
 </p>
+
+<P>
+  <ol>
+    back squats 3 x 8
+    deadlifts 4 x 6
+    good mornings 4 x 10
+    lunges 3 x 10
+    hip thrusts 4 x 8
+    military press 3 x 8
+    bench press 3 x 8
+    incline dumbell press 4 x 10
+    bicep curl dropset 3 x 10 then til failure
+  </ol>
+<p>
+
 </center>
 
 </body>
