--- a/Feelings.html
+++ b/Feelings.html
@@ -29,16 +29,18 @@ FEELINGS
 
 <p>
   5 steps to mental wellbeing
-  <ul>
-Evidence suggests there are 5 steps we can all take to improve our mental wellbeing.
-If you give them a try, you may feel happier, more positive and able to get the most from life.
-Connect – connect with the people around you: your family, friends, colleagues and neighbours. Spend time developing these relationships. Learn more in Connect for mental wellbeing.
-Be active – you don't have to go to the gym. Take a walk, go cycling or play a game of football. Find an activity that you enjoy and make it a part of your life. Learn more in Get active for mental wellbeing.
-Keep learning – learning new skills can give you a sense of achievement and a new confidence. So why not sign up for that cooking course, start learning to play a musical instrument, or figure out how to fix your bike? Find out more in Learn for mental wellbeing.
-Give to others – even the smallest act can count, whether it's a smile, a thank you or a kind word. Larger acts, such as volunteering at your local community centre, can improve your mental wellbeing and help you build new social networks. Learn more in Give for mental wellbeing.
-Be mindful – be more aware of the present moment, including your thoughts and feelings, your body and the world around you. Some people call this awareness "mindfulness". It can positively change the way you feel about life and how you approach challenges. Learn more in Mindfulness for mental wellbeing.
 
+<h2>Evidence suggests there are 5 steps we can all take to improve our mental wellbeing.
+If you give them a try, you may feel happier, more positive and able to get the most from life.</h2>
+<ul>
+<li> Connect – connect with the people around you: your family, friends, colleagues and neighbours. Spend time developing these relationships.</li>
+<li> Be active – you don't have to go to the gym. Take a walk, go cycling or play a game of football. Find an activity that you enjoy and make it a part of your life. </li>
+<li> Keep learning – learning new skills can give you a sense of achievement and a new confidence. So why not sign up for that cooking course, start learning to play a musical instrument, or figure out how to fix your bike? </li>
+<li> Give to others – even the smallest act can count, whether it's a smile, a thank you or a kind word. Larger acts, such as volunteering at your local community centre, can improve your mental wellbeing and help you build new social networks. </li>
+<li> Be mindful – be more aware of the present moment, including your thoughts and feelings, your body and the world around you. Some people call this awareness "mindfulness". It can positively change the way you feel about life and how you approach challenges. </li>
+</ul>
 </p>
+<ul style="text-align:left;">.</ul>
 </center>
 
     </body>
