--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <br>
 </br>
 
-<center>
+
 <h1>
 Happy Healthy Co.
 </h1>
@@ -40,6 +40,81 @@ Happy Healthy Co.
   </div>
   </div>
 </p>
+<h2> About Us </h2>
+
+<p>We are Happy Healthy Company! Our aim is to give you tips on how to eat well, work out and feel good.
+
+Mental wellbeing describes your mental state - how you are feeling and how well you can cope with day-to-day life.
+Our mental wellbeing is dynamic. It can change from moment to moment, day to day, month to month or year to year.
+If you have good mental wellbeing you are able to:
+<ul>
+  <li>feel relatively confident in yourself and have positive self-esteem</li>
+<li>feel and express a range of emotions</li>
+<li>build and maintain good relationships with others<li>
+<li>feel engaged with the world around you</li>
+<li>live and work productively</li>
+<li>cope with the stresses of daily life</li>
+<li>adapt and manage in times of change and uncertainty</li>
+</ul>
+</p>
+<ul style="text-align:left;"></ul>
+<br> </br>
+<br> </br>
+
+<form name="htmlform" method="post" action="html_form_send.php">
+<table width="450px">
+</tr>
+<tr>
+ <td valign="top">
+  <label for="first_name">First Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="first_name" maxlength="50" size="30">
+ </td>
+</tr>
+
+<tr>
+ <td valign="top"">
+  <label for="last_name">Last Name *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="last_name" maxlength="50" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="email">Email Address *</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="email" maxlength="80" size="30">
+ </td>
+
+</tr>
+<tr>
+ <td valign="top">
+  <label for="telephone">Telephone Number</label>
+ </td>
+ <td valign="top">
+  <input  type="text" name="telephone" maxlength="30" size="30">
+ </td>
+</tr>
+<tr>
+ <td valign="top">
+  <label for="comments">Comments *</label>
+ </td>
+ <td valign="top">
+  <textarea  name="comments" maxlength="1000" cols="25" rows="6"></textarea>
+ </td>
+
+</tr>
+<tr>
+ <td colspan="2" style="text-align:center">
+  <input type="submit" value="Submit">   ( <a href="http://www.freecontactform.com/html_form.php">HTML Form</a> )
+ </td>
+</tr>
+</table>
+</form>
+
 
 </center>
 
