--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <br>
 </br>
 
-<centre>
+<center>
 <h1>
 Happy Healthy Co.
 </h1>
-</centre>
+
   <br>
   </br>
 
@@ -40,6 +40,7 @@ Happy Healthy Co.
   </div>
   </div>
 </p>
+</center>
 <h2> About Us </h2>
 
 <p>We are Happy Healthy Company! Our aim is to give you tips on how to eat well, work out and feel good.
