--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ If you have good mental wellbeing you are able to:
 <ul>
   <li>feel relatively confident in yourself and have positive self-esteem</li>
 <li>feel and express a range of emotions</li>
-<li>build and maintain good relationships with others<li>
+<li>build and maintain good relationships with others</li>
 <li>feel engaged with the world around you</li>
 <li>live and work productively</li>
 <li>cope with the stresses of daily life</li>
