--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@ If you have good mental wellbeing you are able to:
 </p>
 <ul style="text-align:left;"></ul>
 <br> </br>
+
+
+
+<p><img src="flower.gif" alt="flower" style="float:right;width:600px;height:600px;">
+The image will float to the right of the text.</p>
+
 <br> </br>
 
 <form name="htmlform" method="post" action="html_form_send.php">
